# libmaxminddb

./: .gitignore  CMakeLists.txt
include/: maxminddb.h
src/: maxminddb.c
